# domcolor

./: .clang-format  .gitignore  CMakeLists.txt
cmd/: CMakeLists.txt
cmd/domcolor_benchmark/: CMakeLists.txt  domcolor_benchmark.cpp
cmd/domcolor_example/: CMakeLists.txt  domcolor_example.cpp
cmd/palette_transfer/: CMakeLists.txt  palette_transfer.cpp
include/domcolor/: argparse.hpp  defs.h  dkm.hpp  domcolor.h
src/: CMakeLists.txt  domcolor.cpp
